--- a/project_data/xml-content/theme.css
+++ b/project_data/xml-content/theme.css
@@ -1,5 +1,6 @@
 body {
 
+    /* fallback fonts, from 1st to last*/
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
