--- a/project_data/xml-content/theme.css
+++ b/project_data/xml-content/theme.css
@@ -55,3 +55,15 @@ button {
     margin-top: 10px;
     margin-left: 110px;
 }
+
+table,th,td {
+    border : 1px solid black;
+    border-collapse: collapse;
+}
+th,td {
+    padding: 5px;
+}
+
+th {
+    background-color: green;
+}
